finished api brand, category, sizeTable

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 4000
-MONGODB_URL = mongodb+srv://ahvuit:qwerty123@cluster0.ewhua4o.mongodb.net/?retryWrites=true&w=majority
-#MONGODB_URL = mongodb://localhost:27017/shoesshop_nodejs
+#MONGODB_URL = mongodb+srv://ahvuit:qwerty123@cluster0.ewhua4o.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb://localhost:27017/shoesshop_nodejs
 JWT_SECRET = mysecret
